k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-php-app
spec:
  selector:
    app: my-php-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 30080
  type: NodePort
